{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 493,
  "lineage": "6878a7f5-3c65-8501-a31c-778d66c44b5a",
  "resources": [
    {
      "module": "module.jump-host",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dfcb1ef8550277af",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-0d94356c88bb71b55",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d94356c88bb71b55",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06e3dd71e09170d77",
            "private_dns": "ip-10-0-0-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.76",
            "public_ip": "44.202.133.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ddf9c5f9f86036c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9597c99a3e8078c",
            "tags": {
              "Name": "public_ec2"
            },
            "tags_all": {
              "Name": "public_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01452930deae0fb26"
            ]
          },
          "dependencies": [
            "module.jump-host.aws_security_group.ec2_security",
            "module.networking.aws_subnet.subnets_public",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.jump-host",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:security-group/sg-01452930deae0fb26",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01452930deae0fb26",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "724690408369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 security group"
            },
            "tags_all": {
              "Name": "ec2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0350109bd7d8bc791",
            "association_id": "eipassoc-0b6dd55440303fbf6",
            "domain": "vpc",
            "id": "eipalloc-0350109bd7d8bc791",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0dd1be140a01bab27",
            "private_dns": "ip-10-0-0-95.ec2.internal",
            "private_ip": "10.0.0.95",
            "public_dns": "ec2-34-232-57-2.compute-1.amazonaws.com",
            "public_ip": "34.232.57.2",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:internet-gateway/igw-05a42c20c5fcc2823",
            "id": "igw-05a42c20c5fcc2823",
            "owner_id": "724690408369",
            "tags": {
              "Name": "cluster-igw"
            },
            "tags_all": {
              "Name": "cluster-igw"
            },
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0350109bd7d8bc791",
            "connectivity_type": "public",
            "id": "nat-0fd2234ce15ac0601",
            "network_interface_id": "eni-0dd1be140a01bab27",
            "private_ip": "10.0.0.95",
            "public_ip": "34.232.57.2",
            "subnet_id": "subnet-0d9597c99a3e8078c",
            "tags": {
              "Name": "NatGateway"
            },
            "tags_all": {
              "Name": "NatGateway"
            }
          },
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_subnet.subnets_public",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_route",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-005b7dd9e1f8419011080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fd2234ce15ac0601",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-005b7dd9e1f841901",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.Nat",
            "module.networking.aws_route_table.route_table"
          ]
        },
        {
          "index_key": "public_route",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a42c20c5fcc2823",
            "id": "r-rtb-073a7c27c0f9a5b101080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-073a7c27c0f9a5b10",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_eip.elastic_ip",
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_nat_gateway.Nat",
            "module.networking.aws_route_table.route_table",
            "module.networking.aws_subnet.subnets_public",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "table1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-073a7c27c0f9a5b10",
            "id": "rtb-073a7c27c0f9a5b10",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a42c20c5fcc2823",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_table"
            },
            "tags_all": {
              "Name": "pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        },
        {
          "index_key": "table2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-005b7dd9e1f841901",
            "id": "rtb-005b7dd9e1f841901",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fd2234ce15ac0601",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv_route_table"
            },
            "tags_all": {
              "Name": "priv_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "privateSubnet_association1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f19e085e7cdd08fd",
            "route_table_id": "rtb-005b7dd9e1f841901",
            "subnet_id": "subnet-0df4360f365810b99"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table",
            "module.networking.aws_subnet.subnets_private",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        },
        {
          "index_key": "privateSubnet_association2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027cd07af71e66724",
            "route_table_id": "rtb-005b7dd9e1f841901",
            "subnet_id": "subnet-01945193f90bbadd4"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table",
            "module.networking.aws_subnet.subnets_private",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "publicSubnet_association1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e76f66cadc883245",
            "route_table_id": "rtb-073a7c27c0f9a5b10",
            "subnet_id": "subnet-0d9597c99a3e8078c"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table",
            "module.networking.aws_subnet.subnets_public",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        },
        {
          "index_key": "publicSubnet_association2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08196474d61b46fec",
            "route_table_id": "rtb-073a7c27c0f9a5b10",
            "subnet_id": "subnet-07543756d1db9abe3"
          },
          "dependencies": [
            "module.networking.aws_route_table.route_table",
            "module.networking.aws_subnet.subnets_public",
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0df4360f365810b99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df4360f365810b99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-01945193f90bbadd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01945193f90bbadd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet4"
            },
            "tags_all": {
              "Name": "subnet4"
            },
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0d9597c99a3e8078c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9597c99a3e8078c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-07543756d1db9abe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07543756d1db9abe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet3"
            },
            "tags_all": {
              "Name": "subnet3"
            },
            "vpc_id": "vpc-0f850f3062d2da996"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_eks_environment"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_eks_environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:vpc/vpc-0f850f3062d2da996",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03758b36d45f6d353",
            "default_route_table_id": "rtb-0f8b0a7569cc70ce7",
            "default_security_group_id": "sg-0ea9fedd0d731ed0a",
            "dhcp_options_id": "dopt-0c9045477746072cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f850f3062d2da996",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8b0a7569cc70ce7",
            "owner_id": "724690408369",
            "tags": {
              "Name": "DevOps-VPC"
            },
            "tags_all": {
              "Name": "DevOps-VPC"
            }
          }
        }
      ]
    }
  ]
}